docker-composeコマンドの修正

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,5 @@ phases:
       - echo start build
       - npm test
       - cd ../
-      - docker-compose up vue -d
+      - docker-compose up -d vue
       - docker-compose up -d
