--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,3 +10,5 @@ phases:
       - echo start build
       - npm test
       - cd ../
+      - docker-compose up -d vue
+      - docker-compose up -d
