--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,14 +1,10 @@
 version: 0.2
 
 phases:
-  install:
-    commands:
-      - cd xsquare-calculation-app/
-      - npm install
   build:
     commands:
-      - echo start build
-      - npm test
+      - cd XSquareCalculationsApiTest/
+      - dotnet test
       - cd ../
       - docker-compose up -d vue
       - docker-compose up -d
