ログイン認証をJWT認証方式にする

--- a/XSquareCalculationsApi/appsettings.json
+++ b/XSquareCalculationsApi/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "XSquareCalculationContext": "server=xman;Port=3306;database=xsquarecalculationsapiDB;User=manager;password=SetSaPWD;"
+  },
+  "JwtSettings": {
+    "SecretKey": "secretKey",
+    "SiteUrl": "localhost",
+    "ExpiredDay": "0.5"
   }
 }
